Práctica 5 Samba/iptables
# Generated by iptables-save v1.4.7 on Wed Apr 19 17:46:07 2017
*nat
:PREROUTING ACCEPT [66:5306]
:POSTROUTING ACCEPT [127:8985]
:OUTPUT ACCEPT [63:4180]
COMMIT
# Completed on Wed Apr 19 17:46:07 2017
# Generated by iptables-save v1.4.7 on Wed Apr 19 17:46:07 2017
*filter
:INPUT DROP [2:501]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [417:54581]
-A INPUT -i lo -j ACCEPT 
-A INPUT -s 10.110.2.0/24 -p icmp -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A INPUT -p udp -m udp --sport 53 -j ACCEPT 
-A INPUT -p udp -m udp --dport 53 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT 
-A INPUT -p tcp -m multiport --sports 53,80,443,8443 -j ACCEPT 
-A INPUT -s 10.110.2.0/24 -p tcp -m tcp --sport 22 -j ACCEPT 
-A INPUT -s 10.110.2.0/24 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 143 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 143 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 25 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 138 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 138 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 139 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 139 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 137 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 137 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 445 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 445 -j ACCEPT 
-A FORWARD -i eth1 -o eth0 -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A FORWARD -i eth0 -o eth1 -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A FORWARD -p udp -m udp --dport 53 -j ACCEPT 
-A FORWARD -p udp -m udp --sport 53 -j ACCEPT 
-A FORWARD -p tcp -m multiport --dports 53,80,443,8443 -j ACCEPT 
-A FORWARD -p tcp -m multiport --sports 53,80,443,8443 -j ACCEPT 
-A FORWARD -d 10.110.1.24/32 -p tcp -m tcp --dport 22 -j ACCEPT 
-A FORWARD -s 10.110.1.24/32 -p tcp -m tcp --sport 22 -j ACCEPT 
-A FORWARD -p tcp -m tcp --dport 25 -j ACCEPT 
-A FORWARD -p tcp -m tcp --sport 25 -j ACCEPT 
-A FORWARD -p tcp -m tcp --dport 143 -j ACCEPT 
-A FORWARD -p tcp -m tcp --sport 143 -j ACCEPT 
-A FORWARD -d 10.110.1.20/32 -p tcp -m tcp --dport 22 -j ACCEPT 
-A FORWARD -d 10.110.1.20/32 -p tcp -m tcp --sport 22 -j ACCEPT 
-A FORWARD -s 10.110.1.20/32 -p tcp -m tcp --sport 22 -j ACCEPT 
COMMIT
# Completed on Wed Apr 19 17:46:07 2017
